# osu-songs-exporter

./: .gitignore  Cargo.toml  README.md  test.sh
src/: cli.rs  main.rs  model.rs  model2.rs
