[package]
name = "osu-songs-exporter"
version = "0.1.0"
authors = ["Adler Neves <adlerosn@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
monostate = "^0.1"
argparse = "^0.2"
derivative = "^2.2"
derive-new = "^0.7"
derive_more = {version = "^1", features = ["full"] }
rusqlite = { version = "^0.32", features = ["backup"] }
audiotags = "^0.5" 
image = "^0.25"
threadpool = "^1"
subprocess = "^0.2"